--- a/index.html
+++ b/index.html
@@ -4,12 +4,37 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>News Daily</title>
+    <!-- css link -->
+    <link rel="stylesheet" href="styles/style.css">
     <!-- bootstrap css link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- google fonts link -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Testing parpes</h1>
-
+   
+<!-- header section -->
+<header class="container mt-3">
+    <head>
+        <div class="d-flex justify-content-between">
+            <div>
+                <div class="d-flex align-items-center">
+                    <button class="btn btn-primary">News</button>
+                    <h5 class="ms-2 text-primary">Daily</h5>
+                </div>
+            </div>
+            <div>
+                <div class="d-flex align-items-end">
+                   <p class="ms-3 text-primary fw-bold">News</p>
+                   <p class="ms-3  text-muted fw-bold">Blog</p>
+                   <img width="45px" src="images/profile.jpg" class="rounded-circle ms-3" alt="">
+                </div>
+            </div>
+        </div>
+    </head>
+</header>
+<!-- js link -->
+<script src="js/style.js"></script>
     <!-- bootstrap js link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
