complete categoy section

--- a/index.html
+++ b/index.html
@@ -31,8 +31,17 @@
                 </div>
             </div>
         </div>
+        <hr>
     </head>
 </header>
+<main>
+    <!-- category section -->
+    <section class="container">
+        <div class="d-flex justify-content-around" id="category-container">
+
+        </div>
+    </section>
+</main>
 <!-- js link -->
 <script src="js/style.js"></script>
     <!-- bootstrap js link -->
