complete category items sections

--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
 
         </div>
     </section>
+
+    <!-- News section -->
+    <section>
+        <div id="news">
+
+        </div>
+    </section>
 </main>
 <!-- js link -->
 <script src="js/style.js"></script>
