complete data loading

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     </section>
 
     <!-- News section -->
-    <section>
+    <section class="container">
         
      <div id="news">
-        
+
      </div>
     </section>
 </main>
