complete dynamic section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,27 @@
      <div id="news">
 
      </div>
+
+     <!-- modal section start heer -->
+     <!-- Scrollable modal -->
+<!-- Button trigger modal -->
+  
+  <!-- Modal -->
+  <div class="modal fade" id="modalTitle" tabindex="-1" aria-labelledby="modalTitleLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div id="mod-body" class="modal-body">
+      
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
     </section>
 </main>
 <!-- js link -->
