complete nvbar ui

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>News Daily</title>
+    <title>Daily News</title>
     <!-- css link -->
     <link rel="stylesheet" href="styles/style.css">
     <!-- bootstrap css link -->
@@ -20,17 +20,18 @@
     <head>
         <div class="d-flex justify-content-between">
             <div>
-                <div class="d-flex align-items-center">
+              <h3 class="fw-bold brand"><span>D</span>aily<span>N</span>ews</h3>
+                <!-- <div class="d-flex align-items-center">
                     <button class="btn btn-primary">News</button>
                     <h5 class="ms-2 text-primary">Daily</h5>
-                </div>
+                </div> -->
             </div>
-            <div>
-                <div class="d-flex align-items-end">
-                   <p class="ms-3 text-primary fw-bold">News</p>
-                   <p class="ms-3  text-muted fw-bold">Blog</p>
-                   <img width="45px" src="images/profile.jpg" class="rounded-circle ms-3" alt="">
-                </div>
+            <div >
+                <ul class="d-flex align-items-end">
+                   <a class="ms-3  text-muted fw-bold nav-item">News</a>
+                   <a class="ms-3  text-muted fw-bold nav-item">Blogs</a>
+                    <a href="" class="nav-item"><img width="45px" src="images/profile.jpg" class="rounded-circle ms-3" alt=""></a>
+                </ul>
             </div>
         </div>
         <hr>
@@ -45,10 +46,8 @@
     </section>
 
     <!-- News section -->
-    <section class="container">
-        
+    <section class="container">   
      <div id="news">
-
      </div>
 
      <!-- modal section start heer -->
