--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -25,7 +25,7 @@
             <div >
                 <ul class="d-flex align-items-end">
                    <a class="ms-3  text-muted fw-bold nav-item">News</a>
-                   <a class="ms-3  text-muted fw-bold nav-item">Blogs</a>
+                   <a target="_blank" href="blog.html" class="ms-3  text-muted fw-bold nav-item">Blogs</a>
                     <a href="" class="nav-item"><img width="45px" src="images/profile.jpg" class="rounded-circle ms-3" alt=""></a>
                 </ul>
             </div>
@@ -33,6 +33,7 @@
         <hr>
     </head>
 </header>
+     
 <main>
     <!-- category section -->
     <section class="container mt-3">
@@ -42,33 +43,45 @@
           <h3 class="text-warning fw-bold">Data not found</h3>
         </div>
     </section>
-
+      <!-- items found -->
+  <section class="container mt-3">
+    <div class="">
+      <h3><span id="items-found">0</span>Items found</h3>
+    </div>
+  </section>
     <!-- News section -->
+         <!-- spinner -->
+         <div id="spiiner" class="d-none text-center mt-5">
+          <div class="spinner-border text-primary" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+             </div>
     <section class="container mt-3">   
      <div id="news">
-     </div>
-
-     <!-- modal section start heer -->
-     <!-- Scrollable modal -->
-<!-- Button trigger modal -->
-  
-  <!-- Modal -->
-  <div class="modal fade" id="modalTitle" tabindex="-1" aria-labelledby="modalTitleLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div id="model-body" class="modal-body">
-      
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        </div>
+</div>
+    </section>
+    <section>
+ 
+    </section>
+<!-- modal -->
+<section>
+  <!-- Button trigger modal -->
+<!-- Modal -->
+<div class="modal fade" id="modalButton" tabindex="-1" aria-labelledby="modalButtonLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div id="modal-body" class="modal-body"> 
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
-    </section>
+</div>
+</section>
 </main>
 <!-- js link -->
 <script src="js/style.js"></script>
